# unlearn

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: tamper.md
experiment_logs/: checkpoint_transfer_hp.md  checkpoint_transfer_unlearn.md  experiment_updates.md  fsdp2_migration.md  gradient_difference_sft.md  hp_orth_coef_tuning.md  kl_retain_loss_tuning.md  lens_unlearn.md  lens_unlearn_8192.md  lens_unlearn_sft.md  max_update_unlearn.md  orth_circuit_breakers.md  probe_unlearn.md  sequential_unlearn.md  simple_npo.md  tuned_lens_unlearn.md
scripts/: run_hp_long.sbatch  run_hp_orth100.sbatch  tune_orth_cb.py  tune_orth_cb.sbatch
setup/: install_vscode_cli.sh  launch_jupyter_filter.sh  launch_vscode_tunnel.sh  setup_filter_kernel.sh
tests/: test_activation_capture.py  test_gradient_freezing.py  test_perlayer_equivalence.py
unlearn/: __main__.py  base_unlearn.py  checkpoint_transfer.py  checkpoint_transfer_unlearn.py  create_unlearn_data.py  hook.py  lens_unlearn.py  online_affine_fitter.py
unlearn/algorithm/: base_unlearn.py  checkpoint_transfer_unlearn.py  lens_unlearn.py  lens_unlearn_muon.py  lens_unlearn_sft.py  max_update_unlearn.py  online_affine_fitter.py  orth_circuit_breakers.py  probe_unlearn.py  sequential_unlearn.py  sequential_unlearn_sft.py  simple_npo.py  weight_partition_unlearn.py
unlearn/analysis/: ignorance_stats.py  tofu_statistics.py
unlearn/cas/: attack.py  evals.py  evals.sh  finetune.py  finetune.sh  finetune_attack.py  finetune_attack.sh  finetune_benign.sh  finetune_crpt.sh  model_utils.py  mt-bench.sh  push_models_to_hub.py  rr-lat.sh  unlearning.py  utils.py
unlearn/evaluation/: eval_callback.py  eval_mmlu_stem.py  eval_wmdp_robust.py  log_eval_to_wandb.py
unlearn/gradient_difference/: grad_diff.py  grad_diff_dataset.py
unlearn/grey_swan_circuit_breaker/: args.py  lorra.py  utils.py
unlearn/kyle/: README.md  tamper.py
(+106 files in other folders)
